Another atttempt to resolve overflow using inherit as sompared to auto.

--- a/css/styles.css
+++ b/css/styles.css
@@ -601,7 +601,7 @@ footer {
 .project-info p {
   color: #74808a;
   margin: 0 0 15px 0;
-  overflow: scroll: auto;
+  overflow: scroll: inherit;
   font-size: 0.9em
 }
 
